--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ button {
   border: none;
   margin-bottom: 20px;
   margin-left: 10px;
+  /* outline-color: transparent; */
 }
 
 /* Button left */
@@ -77,7 +78,9 @@ button {
                3px 3px 7px 1px rgba(78, 87, 102, 0.733);
 }
 
-.btn-1-left:hover {
+.btn-1-left:hover,
+.btn-1-left:focus,
+.btn-1-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -98,7 +101,9 @@ button {
   border-radius: 3px;
 }
 
-.btn-2-left:hover {
+.btn-2-left:hover,
+.btn-2-left:focus,
+.btn-2-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -119,7 +124,9 @@ button {
   border-radius: 6px;
 }
 
-.btn-3-left:hover {
+.btn-3-left:hover,
+.btn-3-left:focus,
+.btn-3-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -140,7 +147,9 @@ button {
   border-radius: 12px;
 }
 
-.btn-4-left:hover {
+.btn-4-left:hover,
+.btn-4-left:focus,
+.btn-4-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -161,7 +170,9 @@ button {
   border-radius: 24px;
 }
 
-.btn-5-left:hover {
+.btn-5-left:hover,
+.btn-5-left:focus,
+.btn-5-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -182,7 +193,9 @@ button {
   border-radius: 100px;
 }
 
-.btn-6-left:hover {
+.btn-6-left:hover,
+.btn-6-left:focus,
+.btn-6-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -203,7 +216,9 @@ button {
   border-radius: 10px 100px / 120px;
 }
 
-.btn-7-left:hover {
+.btn-7-left:hover,
+.btn-7-left:focus,
+.btn-7-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -227,7 +242,9 @@ button {
                3px 3px 7px 1px rgba(78, 87, 102, 0.733);
 }
 
-.btn-8-left:hover {
+.btn-8-left:hover,
+.btn-8-left:focus,
+.btn-8-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -251,7 +268,9 @@ button {
                3px 3px 7px 1px rgba(78, 87, 102, 0.733);
 }
 
-.btn-9-left:hover {
+.btn-9-left:hover,
+.btn-9-left:focus,
+.btn-9-left:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: inset -3px -3px 5px 1px rgba(0, 0, 0, .288),
@@ -273,7 +292,9 @@ button {
               inset 5px 5px 5px rgba(0, 0, 0, .4);
 }
 
-.btn-1-right:hover {
+.btn-1-right:hover,
+.btn-1-right:focus,
+.btn-1-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -296,7 +317,9 @@ button {
   border-radius: 3px;
 }
 
-.btn-2-right:hover {
+.btn-2-right:hover,
+.btn-2-right:focus,
+.btn-2-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -319,7 +342,9 @@ button {
   border-radius: 6px;
 }
 
-.btn-3-right:hover {
+.btn-3-right:hover,
+.btn-3-right:focus,
+.btn-3-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -342,7 +367,9 @@ button {
   border-radius: 12px;
 }
 
-.btn-4-right:hover {
+.btn-4-right:hover,
+.btn-4-right:focus,
+.btn-4-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -365,7 +392,9 @@ button {
   border-radius: 24px;
 }
 
-.btn-5-right:hover {
+.btn-5-right:hover,
+.btn-5-right:focus,
+.btn-5-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -388,7 +417,9 @@ button {
   border-radius: 100px;
 }
 
-.btn-6-right:hover {
+.btn-6-right:hover,
+.btn-6-right:focus,
+.btn-6-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -411,7 +442,9 @@ button {
   border-radius: 10px 100px / 120px;
 }
 
-.btn-7-right:hover {
+.btn-7-right:hover,
+.btn-7-right:focus,
+.btn-7-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -437,7 +470,9 @@ button {
               inset 5px 5px 5px rgba(0, 0, 0, .4);
 }
 
-.btn-8-right:hover {
+.btn-8-right:hover,
+.btn-8-right:focus,
+.btn-8-right:active {
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
@@ -463,7 +498,9 @@ button {
               inset 5px 5px 5px rgba(0, 0, 0, .4);
 }
 
-.btn-9-right:hover {
+.btn-9-right:hover,
+.btn-9-right:focus,
+.btn-9-right:active{
   color: rgb(244, 247, 247);
   background: rgb(57, 57, 57);
   box-shadow: 0 0 0 3px rgba(72, 72, 72, 0.7),
